trunk/Archive2/eb/71f22842aabba4/output
main.cpp: In function 'int main()':
main.cpp:29:23: error: expected primary-expression before '/' token
     size_t size = 16; /
                       ^
main.cpp:30:26: error: expected primary-expression before 'targetVector'
     std::vector<int32_t> targetVector;
                          ^
main.cpp:30:26: error: expected ';' before 'targetVector'
main.cpp:31:5: error: 'targetVector' was not declared in this scope
     targetVector.assign( persistentData, persistentData+size );
     ^
